--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<img src="images/instituto-logo.png" target="_blank" width="100" alt="Instituto Laura Fressatto" class="img-responsive">
 							</a>
 						</div>
-						<a href="#" class="nav-opener pull-right"><i class="fa fa-bars" aria-hidden="true"></i></a>
+						<a href="#" class="nav-opener pull-right"><i class="fa fa-bars main-color" aria-hidden="true"></i></a>
 					</div>
 					<div class="col-xs-12 col-sm-8">
 						<!-- top list -->
