--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 							<ul class="nav-list list-inline">
 								<li><a href="#" data-scroll-nav="0" class="smooth">Inicial</a></li>
 								<li><a href="#" data-scroll-nav="2" class="smooth">Quem somos</a></li>
+								<li><a href="#" data-scroll-nav="3" class="smooth">Histórico de perdas</a></li>
 								<li><a href="https://institutolaura.org" target="_blank">Saiba mais</a></li>
 								<li><a href="mailto:contato@institutolaura.org">Contato</a></li>
 							</ul>
@@ -156,6 +157,87 @@
 				</div>
 			</section>
 			<!-- about section end here -->
+						<!-- counter section start here -->
+						<div class="counter-section text-center bg-img-full pad-top-lg pad-bottom-lg" style="background-image: url(images/img04.jpg);" data-scroll-index="2">
+							<div class="container pad-top-xs">
+								<div class="row">
+									<div class="co-xs-12 col-sm-6 pad-bottom-xs">
+										<span class="counter main-color">24258</span>
+										<span class="txt text-uppercase">Contador de vidas salvas</span>
+									</div>
+									<div class="co-xs-12 col-sm-6 pad-bottom-xs">
+										<span class="counter main-color">2560938</span>
+										<span class="txt text-uppercase">Pacientes conectados</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- counter section end here -->
+			
+			<!-- services section starts here -->
+			<section class="services-section pad-top-lg pad-bottom-sm" data-scroll-index="3">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-md-6 col-md-push-6 pad-bottom-sm">
+							<div class="txt-box">
+								<!-- main heading start here -->
+								<header class="main-heading">
+									<h2 class="heading text-uppercase"><span class="main-color">Histórico de</span>  perdas</h2>
+									<span class="divider"></span>
+									<p>Nós, do Instituto Laura Fressatto, sabemos bem o que é lidar com a perda de pessoas que amamos.</p>
+									<p>A perda de sua filha Laurinha, vítima de complicações médicas, motivou o arquiteto de sistemas Jac Fressatto a desenvolver uma inteligência artificial capaz de gerenciar riscos da doença. Hoje, o Instituto já ajuda a salvar vidas. E pode salvar muito mais!</p>
+								</header>
+								<ul class="list list-unstyled">
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Alagamentos e enchentes</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Deslizamentos de terra</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Indêndios</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Rompimentos de barragens</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Secas e estiagem</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-xs-12 col-md-6 col-md-pull-6 pad-bottom-sm">
+							<!-- services box start here -->
+							<ul class="services-box list-unstyled text-center" style="background-image: url(https://s3.static.brasilescola.uol.com.br/be/2021/11/bandeira-do-brasil.jpg);">
+								<li>
+									<div class="over">
+										<span class="icomoon main-color"></span>
+										<span class="title text-uppercase main-color">Brumadinho</span>
+										<span class="divider white center"></span>
+										<p>Em janeiro de 2019, uma barragem de minério se rompeu em Brumadinho (MG). 272 mortos.</p>
+									</div>
+								</li>
+								<li>
+									<div class="over">
+										<span class="icomoon main-color"></span>
+										<span class="title text-uppercase main-color">Petrópolis</span>
+										<span class="divider white center"></span>
+										<p>Em fevereiro de 2022, diversos deslizamentos e enchentes na região serrana do Rio. 242 mortos.</p>
+									</div>
+								</li>
+								<li>
+									<div class="over">
+										<span class="icomoon main-color"></span>
+										<span class="title text-uppercase main-color">Litoral SP</span>
+										<span class="divider white center"></span>
+										<p>Em fevereiro de 2023, deslizamentos atingiu diversas cidades do litoral Paulista. 65 mortos.</p>
+									</div>
+								</li>
+								<li>
+									<div class="over">
+										<span class="icomoon main-color"></span>
+										<span class="title text-uppercase main-color">Rio Grande do Sul</span>
+										<span class="divider white center"></span>
+										<p>Agora, enchentes alagam diversas cidades do Rio Grande do Sul. 107 mortos até o momento.</p>
+									</div>
+								</li>
+							</ul>
+							<!-- services box end here -->
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- services section end here -->
 		</main>
 		<!-- main content wrapping section end here -->
 		<!-- footer of the page start here -->
